# camara_deputados_56

./: 1_🏠_Home.py  README.md  pyproject.toml  requirements.txt
Depreciado/: 2_📇_Partido_Eleitoral_depreciada.py  3_👤_Deputado(a)_depreciada.py  4_🤖_Machine_Learning_depreciado.py  anotacoes.py  despesas_partido.py
Doc/: Sugestão - ML Projects.md
ETL/: ano2022.ipynb  deputados_56_legislacao_rev1.ipynb  deputados_56_legislacao_rev2.ipynb  deputados_56_legislacao_rev3.ipynb
ETL/.ipynb_checkpoints/: deputados_56_legislacao copy-checkpoint.ipynb  deputados_56_legislacao_rev2-checkpoint.ipynb
data/: deputado_despesas.py  deputado_detalhe.py  deputados_historico.py  despesas_ML.py  distribuicao_uf.py  partidos_grouped.py
data/UML/: modelo_conceitual.drawio
pages/: 2_📇_Partido_Eleitoral.py  3_👤_Deputado(a).py  4_🤖_Machine_Learning.py
